# DATN-MCP-Project

./: .dockerignore  .env.example  .gitignore  .gitignore.txt  AGENTS.md  Docker-compose.yml  README.md  docker-compose.e2e.mock.yml  docker-compose.e2e.yml  docker-compose.resource.yml  package-lock.json  package.e2e.example.json  package.json  playwright.config.ts  ĐỀ CƯƠNG ĐỒ ÁN TỐT NGHIỆP.docx
.cursor/: mcp.json
mcp_server/: Cargo.toml
mcp_server/database_sv/: Cargo.toml
mcp_server/database_sv/src/: main.rs
mcp_server/database_sv/src/provider/: get_multi_table.rs  get_table_schema.rs  health_check.rs  mod.rs  provider.rs
mcp_server/database_sv/src/schemas/: mod.rs  table_schema.rs  tools.rs
mcp_server/database_sv/src/server/: config.rs  mod.rs  server.rs
mcp_server/database_sv/src/tools/: common.rs  mod.rs
mcp_server/lesson_sv/: Cargo.toml  README.md
mcp_server/lesson_sv/docs/: database_mcp_contract_mapping.md
mcp_server/lesson_sv/src/: contract.rs  error.rs  main.rs
mcp_server/lesson_sv/src/domain/: lesson.rs  mod.rs  tools.rs
mcp_server/lesson_sv/src/server/: config.rs  mcp_client_tests.rs  mod.rs  server.rs
mcp_server/lesson_sv/src/services/: access_policy.rs  finalizer.rs  fixture_tests.rs  flow_tests.rs  grading.rs  lesson_generator.rs  lesson_validator.rs  mod.rs  node_analyzer.rs  observability.rs  progress_policy.rs  remediation.rs  request_guard.rs  resource_packer.rs
mcp_server/lesson_sv/tests/fixtures/: database_mcp_contract.json  sql-joins.lesson-input.json  (+1 more)
mcp_server/resource_sv/: Cargo.toml  README.md
mcp_server/resource_sv/src/: client.rs  contracts.rs  main.rs  validation.rs
mcp_server/resource_sv/tests/: readiness_contract.rs
mcp_server/roadmap_sv/: Cargo.toml  README.md
mcp_server/roadmap_sv/docs/: roadmap_mcp_dfd_level_0.drawio  roadmap_mcp_dfd_level_1.drawio  roadmap_mcp_dfd_level_2.drawio
mcp_server/roadmap_sv/src/: contract.rs  error.rs  main.rs
orchestrator/: Cargo.toml  README.md
orchestrator/src/: main.rs
orchestrator/src/agent/: binding.rs  capability.rs  context.rs  evaluation.rs  executor.rs  json_utils.rs  kernel.rs  mod.rs  planner.rs  prompt.rs
orchestrator/src/api/: handlers.rs
orchestrator/src/mcp/: client.rs  mod.rs  registry.rs  server.rs
orchestrator/src/prompt/: agent.md  plan.md  resolver.md  test.md
resource_service/: Cargo.toml  README.md
resource_service/config/: evaluation_topic_manifest.yaml  official_source_catalog.yaml  official_topic_seed_manifest.yaml
resource_service/docs/: endpoint_test_guide.md
resource_service/evaluation/: resource_eval_dataset_v0_2.json
resource_service/reports/: corpus_readiness_report.example.json  resource_eval_report.example.json  v0_2_1_acceptance_report.md
resource_service/scripts/: run_corpus_readiness.ps1  run_resource_evaluation.ps1  seed_official_corpus.ps1
resource_service/src/: chunker.rs  config.rs  db.rs  embedding_provider.rs  error.rs  extractor.rs  lib.rs  main.rs  worker.rs
resource_service/src/api/: admin.rs  auth.rs  embedding.rs  enrichment.rs  health.rs  mod.rs  research.rs  resources.rs  search.rs  source_crawl.rs
resource_service/src/corpus/: mod.rs  readiness.rs  seed_manifest.rs  source_catalog.rs  triage.rs
resource_service/src/models/: common.rs  embedding.rs  enrichment.rs  health.rs  mod.rs  recommendation.rs  research.rs  resources.rs  search.rs  source_crawl.rs
resource_service/src/repository/: admin_review.rs  crawl.rs  embedding.rs  enrichment.rs  fetch_artifacts.rs  health_check.rs  mappers.rs  mod.rs  recommendation.rs  research.rs  resources.rs  scheduler.rs  schema.rs  search.rs  sources.rs
resource_service/src/service/: admin.rs  embedding.rs  enrichment.rs  github_discovery.rs  mod.rs  pipeline.rs  research.rs  resources.rs  search.rs  source_crawl.rs  validation.rs
resource_service/tests/: e2e_pipeline.rs  evaluation_dataset.rs  evaluation_runner.rs  integration_suite.rs  readiness_gate.rs
(+211 files in other folders)
