[package]
name = "database_sv"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = {workspace = true}
tokio = { workspace = true }
anyhow = {workspace = true}
tracing = {workspace = true}
tracing-subscriber ={ workspace = true }
axum ={ workspace = true }
deadpool ={ workspace = true }
deadpool-postgres ={ workspace = true }
serde = {workspace = true}
serde_json ={ workspace = true}
tokio-postgres-rustls = "0.14.0"
rustls = "0.23"
webpki-roots = "1.0.7"
rmcp = {workspace=true}
tokio-util = {workspace = true}
