[package]
name = "roadmap_sv"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = {workspace=true}
dotenv = {workspace = true}
tokio = { workspace = true }
anyhow = {workspace = true}
tracing = {workspace = true}
tracing-subscriber ={ workspace = true }
axum ={ workspace = true }
serde_json ={ workspace = true}
serde ={workspace = true}
tokio-util = {workspace = true}
